Enh 35600519 - [35401785->23.03.2] Remove --add-opens java.base/java.util=com.oracle.coherence from JDK 11 and higher to enable Coherence management  (ce-main -> 23.03 @ 101470) Remote remote.full on coherence-ce/release/coherence-ce-v23.03 success, changes 101745, synced @101747, job.9.20230713144619.13659
[git-p4: depot-paths = "//dev/coherence-ce/release/coherence-ce-v23.03/": change = 101750]